--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After "
+    "After cleaning the mouse data to drop the duplicates of timepoints for mouse ID g989, which could create false data, one can see multiple observations. To start, there is an almost equal amount of female and male mice that were tested in this study. Secondly, Capomulin and Ramicane were the two drugs that had the biggest effect on tumor volume, meaning these two drops had the most significant drop in tumor volume compared to the other drugs that were tested. Thirdly, the most significant change in tumor size happened typically between day 5 and day 30 (for the specific mouse observed y793). Lastly, there was a positive correlation between tumor size and mouse weight, meaning the mice gained more weight the bigger their tumors grew."
    ]
   },
   {
